--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -83,8 +83,8 @@
                         <p>Hello world! This is HTML5 Boilerplate.</p>
                         <h2>Swagger</h2>
                         <a href="/swagger-ui/index.html">swagger-ui</a>
-                        <h2>H2</h2>
-                        <a href="/h2-console">h2-console</a>
+                        {/*<h2>H2</h2>
+                        <a href="/h2-console">h2-console</a>*/}
                         <h2>Actuator</h2>
                         <a href="/actuator">actuator</a>
                         <br/>
