--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -85,6 +85,8 @@
                         <a href="/swagger-ui/index.html">swagger-ui</a>
                         {/*<h2>H2</h2>
                         <a href="/h2-console">h2-console</a>*/}
+                        <h2>adminer</h2>
+                        <a href="http://localhost:8081/?server=mysql-db&username=root&db=school">if it was up with docker-conpose</a>
                         <h2>Actuator</h2>
                         <a href="/actuator">actuator</a>
                         <br/>
